<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundViewExerciseDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.antosh.cutieyoga.Settings">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:padding="16dp"
        android:background="@android:color/white"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/rdiGroup"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdiEasy"
                android:text="@string/easy_mode"
                android:theme="@style/MyRadioButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rdiMedium"
                android:text="@string/medium_mode"
                android:theme="@style/MyRadioButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rdiHard"
                android:text="@string/hard_mode"
                android:theme="@style/MyRadioButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </android.support.v7.widget.CardView>



    <Switch
        android:id="@+id/switchAlarm"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cardView"
        android:text="@string/on_off_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

    </TimePicker>

    <info.hoang8f.widget.FButton
        android:layout_alignParentBottom="true"
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/backgroundViewExerciseDark"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shadowColor="@color/colorPrimaryDark"
        />

</RelativeLayout>
